Добавить управление группами студентов
