# server/routes/admin/students.routes.js
@@ -1,0 +1,8 @@
+import { Router } from 'express'
+
+import { studentsController } from '../../features/admin/students/students.controller.js'
+
+export const studentsRouter = Router()
+
+studentsRouter.get('/search', studentsController.searchStudents)
+studentsRouter.get('/', studentsController.getStudents)
